compiler/tests-spec/testData/psi/templates/identifiers/callableReference.kt
fun case_1() {
    Boolean::<!ELEMENT!>

    Boolean???::<!ELEMENT!>::<!ELEMENT!>::<!ELEMENT!>

    org.jetbrains.Boolean?::<!ELEMENT!>::<!ELEMENT!>
}
